# mdeGranular

./: .gitignore  .gitmodules  README.md  history.txt
.github/workflows/: build-all.yml  build.yml  max-macos.yml  max-windows.yml  pd-linux.yml  pd-macos.yml  pd-windows.yml
max/: mdeGranular~.maxhelp
max/cmake/: CMakeLists.txt
max/macosx/xcode/mdegranular~.xcodeproj/: project.pbxproj
max/macosx/xcode/mdegranular~.xcodeproj/project.xcworkspace/xcuserdata/michael.xcuserdatad/: UserInterfaceState.xcuserstate
max/max-package/: README.md  package-info.json
max/max-package/docs/: mdeGranular~.maxref.xml
max/max-package/help/: mdeGranular~.maxhelp
max/windows/: Makefile
mdegranular/: history.txt  readme.txt
mdegranular/max/: mdeGranular~.maxhelp
mdegranular/max/mdegranular~.mxo/Contents/: Info.plist
mdegranular/max/mdegranular~.mxo/Contents/MacOS/: mdegranular~
mdegranular/max/xcode/mdegranular~.xcodeproj/project.xcworkspace/xcuserdata/michael.xcuserdatad/: WorkspaceSettings.xcsettings
mdegranular/pd/: mdeGranular~help.pd  mdegranular~.pd_darwin
mdegranular/src/: mdeGranular~.c  mdeGranular~.h  mdeGranular~maxmsp.c
pd/: makefile  mdeGranular~.pd_darwin  mdeGranular~.pd_linux  mdeGranular~help.pd  mdegranular~.pd_darwin
src/: CMakeLists.txt  TAGS  mdeGranular~.c  mdeGranular~.h  mdeGranular~maxmsp.c  mdeGranular~pd.c
